[package]
name = "fs-change-detector"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "reports if something has changed in the file tree"
repository = "https://github.com/piot/fs-change-detector"

[dependencies]
message-channel = "0.0.1"
notify = "8.0.0"
thiserror = "2.0.12"
tracing = "0.1.40"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
